# Relic

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  release.sh
.github/workflows/: release.yml
include/TsEngine/: Analysis.h  Breakpoint.h  Core.h  Decompiler.h  Il2cpp.h  Maps.h  Memory.h  Process.h  Remote.h  Symbols.h  UI.h
src/: Analysis.cpp  Breakpoint.cpp  Decompiler.cpp  Il2cpp.cpp  Maps.cpp  Memory.cpp  Process.cpp  Remote.cpp  Symbols.cpp  UI.cpp  main.cpp
test/: target.cpp  test_watch.cpp
